# exrust

./: Cargo.toml  README.md
async/execution/: Cargo.toml
async/execution/src/: main.rs
async/getting-started/: Cargo.toml
async/getting-started/src/: main.rs
in-action/compound_data_types/: Cargo.toml
in-action/compound_data_types/src/: main.rs
in-action/cpusim/: Cargo.toml
in-action/cpusim/src/: main.rs
in-action/cubesat/: Cargo.toml
in-action/cubesat/src/: main.rs
in-action/data_in_depth/: Cargo.toml
in-action/data_in_depth/src/: main.rs
in-action/files-and-storage/: Cargo.toml
in-action/files-and-storage/src/hashmap/: main.rs
in-action/files-and-storage/src/hexdump/: main.rs
in-action/files-and-storage/src/keyval/: lib.rs  main.rs
in-action/files-and-storage/src/serialize/: main.rs
in-action/mandelbrot/: Cargo.toml
in-action/mandelbrot/src/: main.rs
in-action/memory/: Cargo.toml
in-action/memory/src/: main.rs
in-action/networking/: Cargo.toml
in-action/networking/src/dns/: main.rs
in-action/networking/src/http/: main.rs
in-action/networking/src/tcp/: main.rs
in-action/time/: Cargo.toml
in-action/time/src/: main.rs
the-book/advanced-features/: Cargo.toml
the-book/advanced-features/hello-macro/: Cargo.toml
the-book/advanced-features/hello-macro/hello-macro-derive/: Cargo.toml
the-book/advanced-features/hello-macro/hello-macro-derive/src/: lib.rs
the-book/advanced-features/hello-macro/src/: lib.rs
the-book/advanced-features/src/: functions.rs  macros.rs  main.rs  traits.rs  types.rs  unsafes.rs
the-book/command-line-program/: Cargo.toml
the-book/command-line-program/src/: lib.rs  main.rs
the-book/common-collections/: Cargo.toml
the-book/common-collections/src/: exvec.rs  main.rs
the-book/common-programming-concepts/: Cargo.toml
the-book/common-programming-concepts/src/: main.rs
the-book/enums-and-pattern-matching/: Cargo.toml
the-book/enums-and-pattern-matching/src/: main.rs
the-book/error-handling/: Cargo.toml  hi.txt
the-book/error-handling/src/: main.rs
the-book/fearless-concurrency/: Cargo.toml
the-book/fearless-concurrency/src/: main.rs
the-book/functional-language-features/: Cargo.toml
the-book/functional-language-features/src/: closures.rs  iterators.rs  main.rs
the-book/generic-types-traits-and-lifetimes/: Cargo.toml
the-book/generic-types-traits-and-lifetimes/src/: main.rs
the-book/guessing-game/: Cargo.toml
the-book/guessing-game/src/: main.rs
the-book/managing-growing-projects-with-packages-crates-and-modules/: Cargo.toml
the-book/managing-growing-projects-with-packages-crates-and-modules/src/: front_of_house.rs  lib.rs  main.rs
the-book/object-oriented-programming/: Cargo.toml
the-book/object-oriented-programming/src/: main.rs  state.rs  traits.rs
the-book/patterns-and-matching/: Cargo.toml
the-book/patterns-and-matching/src/: main.rs
the-book/smart-pointers/: Cargo.toml
the-book/smart-pointers/src/: main.rs
the-book/understanding-ownership/: Cargo.toml
the-book/understanding-ownership/src/: main.rs
the-book/using-structs-to-structure-related-data/: Cargo.toml
the-book/using-structs-to-structure-related-data/src/: main.rs
the-book/writing-automated-tests/: Cargo.toml
the-book/writing-automated-tests/src/: lib.rs
the-book/writing-automated-tests/tests/: integration_tests.rs
the-book/writing-automated-tests/tests/common/: mod.rs
wasm/game-of-life/: Cargo.toml
wasm/game-of-life/src/: lib.rs
wasm/game-of-life/tests/: web.rs
wasm/game-of-life/www/: index.html  index.js
wasm/webgl/: .gitignore  Cargo.toml
wasm/webgl/res/shader/: default.frag.glsl  default.vert.glsl  gui.frag.glsl  gui.vert.glsl  shadow.frag.glsl  shadow.vert.glsl
wasm/webgl/src/: gui.rs  lib.rs
wasm/webgl/www/: index.html  index.js
