[workspace]
members = [
	"the-book/common-programming-concepts",
	"the-book/guessing-game",
	"the-book/understanding-ownership",
	"the-book/using-structs-to-structure-related-data",
	"the-book/enums-and-pattern-matching",
	"the-book/managing-growing-projects-with-packages-crates-and-modules",
	"the-book/common-collections",
	"the-book/error-handling",
	"the-book/generic-types-traits-and-lifetimes",
	"the-book/writing-automated-tests",
	"the-book/command-line-program",
	"the-book/functional-language-features",
	"the-book/smart-pointers",
	"the-book/fearless-concurrency",
	"the-book/object-oriented-programming",
	"the-book/patterns-and-matching",
	"the-book/advanced-features",
]
