[package]
name = "files_and_storage"
version = "0.1.0"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"

[dependencies]
serde = "1"
serde_derive = "1"
serde_cbor = "0.8"
serde_json = "1"
bincode = "1"
byteorder = "1"
crc = "1"

[[bin]]
name = "serialize"
path = "src/serialize/main.rs"

[[bin]]
name = "hexdump"
path = "src/hexdump/main.rs"

[lib]
name = "keyval"
path = "src/keyval/lib.rs"

[[bin]]
name = "keyval-mem"
path = "src/keyval/main.rs"

[[bin]]
name = "hashmap"
path = "src/hashmap/main.rs"
