[package]
name = "files_and_storage"
version = "0.1.0"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"

[dependencies]
serde = "1.0.137"
serde_derive = "1.0.137"
serde_cbor = "0.11.2"
serde_json = "1.0.81"
bincode = "1.3.3"
byteorder = "1.4.3"
crc = "3.0.0"

[[bin]]
name = "serialize"
path = "src/serialize/main.rs"

[[bin]]
name = "hexdump"
path = "src/hexdump/main.rs"

[lib]
name = "keyval"
path = "src/keyval/lib.rs"

[[bin]]
name = "keyval-mem"
path = "src/keyval/main.rs"

[[bin]]
name = "hashmap"
path = "src/hashmap/main.rs"
