[package]
name = "networking"
version = "0.1.0"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"

[dependencies]
reqwest = "0.11.10"
openssl = "0.10.40"
clap = "3.1.18"
trust-dns-resolver = "0.21.2"
rand = "0.8.5"
futures = "0.3.21"

[[bin]]
name = "http"
path = "src/http/main.rs"

[[bin]]
name = "tcp"
path = "src/tcp/main.rs"

[[bin]]
name = "dns"
path = "src/dns/main.rs"
